--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 .page {
   min-width: 1100px;
   max-width: 1600px;
-  margin: 0;
+  margin: 0 auto;
   justify-content: center;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
@@ -32,9 +32,9 @@
 .nav__links {
   display: flex;
   column-gap: 20px;
-  list-style: none;
+  list-style-type: none;
   padding: 0;
-  margin: 0;
+  margin-top: 8px;
 }
 
 .nav__link {
