--- a/styles/style.css
+++ b/styles/style.css
@@ -234,12 +234,11 @@
   flex-shrink: 0;
   flex-basis: 780px;
   max-width: 780px;
-  position: relative; 
+  position: relative;
 }
 
 .events__image {
   max-width: 100%;
-  ;
 }
 
 .person {
@@ -247,7 +246,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  gap: 10px; 
+  gap: 10px;
 }
 
 .person_name_feynman {
@@ -276,23 +275,133 @@
 }
 
 .person__image {
-   max-width: 100%; 
+  max-width: 100%;
 }
 
 .person__image_size_l {
-   width: 140px;
+  width: 140px;
 }
 
 .person__image_size_m {
-   width: 100px; 
+  width: 100px;
 }
 
 .person__image_size_s {
-   width: 80px; 
+  width: 80px;
 }
 
 .person__caption {
   text-align: center;
   font-size: 14px;
-  margin: 0; 
+  margin: 0;
+}
+
+.membership {
+  padding: 100px 0 140px;
+  background-color: #057bf2;
+  color: #ffffff;
+}
+
+.membership__title {
+  max-width: 574px;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 44px;
+  font-weight: 500;
+  line-height: 52px;
+}
+
+.membership__steps {
+  list-style-type: none;
+  padding: 0;
+  margin: 100px 0 0;
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+
+.step {
+  flex-basis: 220px;
+}
+
+.step__title {
+  margin: 0;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+}
+
+.step__icon {
+  margin-left: 20px;
+}
+
+.step__description {
+  margin: 10px 0 0;
+}
+
+.footer {
+  box-sizing: border-box;
+  background-color: #2f2f2f;
+  color: white;
+  padding: 60px 80px;
+}
+
+.footer__columns {
+  display: flex;
+  margin-bottom: 100px;
+  align-items: flex-start;
+}
+
+.footer__column_content_logo{
+  flex-shrink: 0;
+}
+
+.footer__column_content_hours {
+  margin-left: auto;
+}
+
+.footer__column_content_social {
+  margin-left: 80px;
+}
+
+.footer__logo {
+  width: 58px;
+  height: 80px;
+}
+
+.footer__column-heading {
+  margin: 0 0 20px;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 700;
+}
+
+.footer__list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer__list-item {
+  margin-bottom: 16px;
+  line-height: 1.5;
+}
+
+.footer__column-link {
+  color: white;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+}
+
+.footer__copyright {
+  color: #ffffff;
 }
